k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: server-deployment   # deployment objesinin ismi
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server  #deployment yonettiği podları bu labeldan bulucak  
  template:
    metadata:
      labels:
        component: server   # bu label sayesinde servis ve deploymen nesnesi erişecek.
    spec:
      containers:
        - name: server      # container ismi
          image: cygnetops/multi-server-pgfix-5-11   # kullanılacak image
          ports:  
            - containerPort: 5000  # container'a erişme portumuz
