k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server  # hangi podlara erişeceğini söylüyoruz.
  ports:
    - port: 5000  # cluster içinden bu container'a bu port ile erişilecek.
      targetPort: 5000   # container'i expose ettiğimiz port
